# app/Domains/Appointments/Requests/ListAppointmentsRequest.php
@@ -18,6 +18,7 @@ class ListAppointmentsRequest extends FormRequest
         return [
             'status' => ['nullable', new Enum(AppointmentStatusEnum::class)],
             'date' => ['nullable', 'date'],
+            'doctor_id' => ['nullable', 'string', 'uuid'],
             'limit' => ['nullable', 'integer', 'min:1', 'max:100'],
         ];
     }
